--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 api==0.0.7
 beautifulsoup4==4.8.2
+ebaysdk==2.2.0
 Flask==1.1.1
 Flask-Cors==3.0.9
 Flask-Login==0.5.0
@@ -7,3 +8,4 @@ Flask-RESTful==0.3.8
 flask-restplus==0.13.0
 flask-restx==0.1.1
 flask-swagger-ui==3.25.0
+pytest==5.4.1
